--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
         "@hookform/resolvers": "^2.9.7",
         "@microsoft/applicationinsights-react-js": "^3.4.0",
         "@microsoft/applicationinsights-web": "^2.8.9",
+        "@mui/icons-material": "^5.11.0",
         "@mui/material": "^5.9.2",
         "@mui/system": "^5.11.8",
         "@mui/x-data-grid": "^5.15.3",
-        "@mui/icons-material": "^5.11.0",
         "@reduxjs/toolkit": "^1.8.3",
         "@svgr/webpack": "^5.5.0",
         "@types/react-pdf": "^5.7.3",
@@ -28,6 +28,7 @@
         "notistack": "^2.0.5",
         "react": "^18.2.0",
         "react-app-polyfill": "^3.0.0",
+        "react-cookie": "^6.1.1",
         "react-dev-utils": "^12.0.1",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.43.0",
@@ -37,16 +38,19 @@
         "react-refresh": "^0.14.0",
         "react-router-dom": "^6.8.0",
         "react-use-intercom": "^2.0.0",
+        "tss-react": "^4.6.0",
         "web-vitals": "^3.1.1",
-        "yup": "^0.32.11",
-        "tss-react": "^4.6.0"
+        "yup": "^0.32.11"
     },
     "devDependencies": {
         "@babel/core": "^7.16.0",
+        "@babel/plugin-syntax-flow": "^7.18.6",
+        "@babel/plugin-transform-react-jsx": "^7.14.9",
+        "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
+        "@testing-library/dom": "^8.20.0",
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^13.0.0",
         "@testing-library/user-event": "^14.4.3",
-        "@testing-library/dom": "^8.20.0",
         "@types/case-sensitive-paths-webpack-plugin": "^2.1.6",
         "@types/dotenv-webpack": "^7.0.3",
         "@types/html-webpack-plugin": "^3.2.6",
@@ -57,9 +61,6 @@
         "@types/react-dom": "^18.0.0",
         "@typescript-eslint/eslint-plugin": "^5.30.5",
         "@typescript-eslint/parser": "^5.30.5",
-        "@babel/plugin-syntax-flow": "^7.18.6",
-        "@babel/plugin-transform-react-jsx": "^7.14.9",
-        "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
         "babel-jest": "^27.4.2",
         "babel-loader": "^8.2.3",
         "babel-plugin-named-asset-import": "^0.3.8",
@@ -67,7 +68,9 @@
         "bundle-loader": "^0.5.6",
         "case-sensitive-paths-webpack-plugin": "^2.4.0",
         "copy-webpack-plugin": "^11.0.0",
+        "css-loader": "^6.7.1",
         "css-minimizer-webpack-plugin": "^4.0.0",
+        "dotenv": "^10.0.0",
         "dotenv-webpack": "^7.1.1",
         "eslint": "^8.3.0",
         "eslint-config-prettier": "^8.5.0",
@@ -75,34 +78,32 @@
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "^7.30.1",
         "eslint-webpack-plugin": "^3.2.0",
-        "husky": "^8.0.1",
-        "jest": "^29.4.1",
-        "css-loader": "^6.7.1",
-        "dotenv": "^10.0.0",
         "file-loader": "^6.2.0",
         "fs-extra": "^10.0.0",
         "html-webpack-plugin": "^5.5.0",
+        "husky": "^8.0.1",
+        "jest": "^29.4.1",
         "less": "^4.1.3",
         "less-loader": "^11.0.0",
         "mini-css-extract-plugin": "^2.4.5",
         "prettier": "^2.7.1",
         "react-refresh-typescript": "^2.0.7",
-        "tslib": "^2.5.0",
+        "resolve": "^1.20.0",
+        "resolve-url-loader": "^4.0.0",
+        "sass-loader": "^12.3.0",
+        "semver": "^7.3.5",
+        "style-loader": "^3.3.1",
+        "terser-webpack-plugin": "^5.3.6",
         "ts-loader": "^9.3.1",
         "ts-node": "^10.8.2",
         "tsconfig-paths-webpack-plugin": "^4.0.0",
+        "tslib": "^2.5.0",
         "typescript": "^4.9.4",
         "url-loader": "^4.1.1",
         "webpack": "^5.75.0",
         "webpack-cli": "^5.0.1",
         "webpack-dev-server": "^4.11.1",
         "webpack-manifest-plugin": "^5.0.0",
-        "webpack-merge": "^5.8.0",
-        "resolve": "^1.20.0",
-        "resolve-url-loader": "^4.0.0",
-        "sass-loader": "^12.3.0",
-        "semver": "^7.3.5",
-        "style-loader": "^3.3.1",
-        "terser-webpack-plugin": "^5.3.6"
+        "webpack-merge": "^5.8.0"
     }
 }
